syntax = "proto3";
 
package proto;

message Car {
	string id = 1;
	string name = 2;
	string brand = 3;
	int32 manufactureYear = 4;
	int32 modelYear = 5;
	float price = 6;
}

message CarDTO {
	string name = 1;
	string brand = 2;
	int32 manufactureYear = 3;
	int32 modelYear = 4;
	float price = 5;
}

message Empty {}

message CarRequestId {
	string id = 1;
}

message CarList {
	repeated Car cars = 1;
}


service CarService {
	rpc CreateCar(CarDTO) returns (Car);
	rpc GetCar(CarRequestId) returns (Car);
	rpc GetAllCar(Empty) returns (CarList);
	rpc UpdateCar(Car) returns (Car);
	rpc DeleteCar(CarRequestId) returns (Empty);
	rpc DeleteAllCar(Empty) returns (Empty);
}
